<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="horizontal" 
    android:background="#FFFFFF"
     >
    
    <Button android:id="@+id/button_search"   
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_search" 
        android:onClick="searchForRoom"/>
    
    <EditText android:id="@+id/search_start_room"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@id/button_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search_start_room" 
        />
    
    <EditText
        android:id="@+id/search_end_room"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_start_room"
        android:layout_toStartOf="@id/button_search"
        android:hint="@string/search_end_room"
        />

    <ImageView
        android:id="@+id/csic_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:adjustViewBounds="true"
        android:contentDescription="@+string/CSIC_Map"
        android:scaleType="fitXY"
        android:src="@+drawable/csic_first"
        android:onClick="showData"
        />
    
    

    <RadioGroup
        android:id="@+id/floors_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:background="@drawable/back" >

        <RadioButton
            android:id="@+id/button_floor_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="displayCorrectFloor"
            android:text="@string/button_floor_1" />

        <RadioButton
            android:id="@+id/button_floor_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="displayCorrectFloor"
            android:text="@string/button_floor_2" />

        <RadioButton
            android:id="@+id/button_floor_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="displayCorrectFloor"
            android:text="@string/button_floor_3" />
    </RadioGroup>
    
    <TextView 
        android:id="@+id/bottom_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/title_activity_main"
        android:textSize="30sp"
        android:background="@drawable/back"
        />

</RelativeLayout>
<!--     android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" 
    
    android:layout_width="match_parent"
        android:layout_height="match_parent"
    
    android:checkedButton="@id/button_floor_1"
    
        <DrawView 
        android:id="@+id/lines"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@+string/Direction_lines"
  		android:background="#000000"
        />
    -->
